--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,9 +1,13 @@
 .header {
   padding: 20px 0;
+  text-align: center;
+  justify-content: center;
 }
 .nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  font-size: 36px;
+  color: #545454;
 }
 .nav-logo {
   display: inline-flex;
